--- a/notificatorlib/build.gradle
+++ b/notificatorlib/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'org.greenrobot:greendao:3.2.0'
+    compile 'org.greenrobot:greendao:3.2.0'
     implementation 'com.rabbitmq:amqp-client:4.11.3'
+    compile 'com.squareup.okhttp3:okhttp:3.6.0'
 }
