--- a/notificatorlib/build.gradle
+++ b/notificatorlib/build.gradle
@@ -4,7 +4,6 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 26
 
-
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 26
@@ -41,4 +40,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'commons-io:commons-io:2.5'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
