--- a/notificatorlib/build.gradle
+++ b/notificatorlib/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'commons-io:commons-io:2.5'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+
 }
