Change hardware accelerated to true.

--- a/notificatorlib/src/main/AndroidManifest.xml
+++ b/notificatorlib/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:hardwareAccelerated="false"
+        android:hardwareAccelerated="true"
         android:largeHeap="true">
         <activity android:name=".ImageActivity"
             android:theme="@style/BlackTheme"/>
