--- a/notificatorlib/build.gradle
+++ b/notificatorlib/build.gradle
@@ -51,7 +51,8 @@ dependencies {
     implementation 'commons-io:commons-io:2.5'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
 
 }
