--- a/notificatorlib/build.gradle
+++ b/notificatorlib/build.gradle
@@ -33,6 +33,7 @@ android {
         }
         lintOptions {
             disable 'GradleDependency'
+            abortOnError false
         }
     }
 }
