--- a/notificatorlib/bintray.gradle
+++ b/notificatorlib/bintray.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.jfrog.bintray'
 
-version = '2.0.9'
+version = '2.0.10'
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
@@ -13,8 +13,8 @@ artifacts {
 
 // Bintray
 bintray {
-    user = 'siggytech'
-    key = '3a0613ff63ffdbad757ba92a713288e7b3068aba'
+    user = ''
+    key = ''
 
     pkg {
         repo = 'utilities'
