Last commit until merge master

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,64 @@
 /build
 /captures
 .externalNativeBuild
+/android-vad-v1.0.0-release/build/.transforms/d4453d23550f10afed061b4ef582d9c6/jetified-android-vad-v1.0.0-release/res/values/values.xml
+/android-vad-v1.0.0-release/build/.transforms/d4453d23550f10afed061b4ef582d9c6/jetified-android-vad-v1.0.0-release/AndroidManifest.xml
+/android-vad-v1.0.0-release/build/.transforms/2bafaa2fe517b03be6e2ee2b1e98be3a/jetified-android-vad-v1.0.0-release-runtime.jar
+/android-vad-v1.0.0-release/build/.transforms/23d83b4fb580e1a429a6f6e6c9f3d1d6/jetified-android-vad-v1.0.0-release.aar
+/android-vad-v1.0.0-release/build/.transforms/026ed1a8a3ce01a849b80cd67c34a552/com.konovalov.vad-r.txt
+/android-vad-v1.0.0-release/build/.transforms/371d433f5a77f0dc35b41489d3c4e103/jetified-android-vad-v1.0.0-release-api.jar
+/android-vad-v1.0.0-release/build/.transforms/772897c03f1742abff0da4a0a7655517/jetified-android-vad-v1.0.0-release-runtime.jar
+/android-vad-v1.0.0-release/build/.transforms/cb4a32b33fb3babb556a4dd2713a9c01/jetified-android-vad-v1.0.0-release-api.jar
+/android-vad-v1.0.0-release/build/.transforms/d3089748ab626918cea3e75090aaf695/com.konovalov.vad-r.txt
+/android-vad-v1.0.0-release/build/.transforms/df1482384b234c3f9c590487e50a0a17/jetified-android-vad-v1.0.0-release.aar
+/android-vad-v1.0.0-release/build/.transforms/1e40cc8ea6eef52e4fd6b623a1d97560/jetified-android-vad-v1.0.0-release/jars/classes.jar
+/android-vad-v1.0.0-release/build/.transforms/1e40cc8ea6eef52e4fd6b623a1d97560/jetified-android-vad-v1.0.0-release/jni/arm64-v8a/libvad_jni.so
+/android-vad-v1.0.0-release/build/.transforms/1e40cc8ea6eef52e4fd6b623a1d97560/jetified-android-vad-v1.0.0-release/jni/armeabi-v7a/libvad_jni.so
+/android-vad-v1.0.0-release/build/.transforms/1e40cc8ea6eef52e4fd6b623a1d97560/jetified-android-vad-v1.0.0-release/jni/x86/libvad_jni.so
+/android-vad-v1.0.0-release/build/.transforms/1e40cc8ea6eef52e4fd6b623a1d97560/jetified-android-vad-v1.0.0-release/jni/x86_64/libvad_jni.so
+/android-vad-v1.0.0-release/build/.transforms/1e40cc8ea6eef52e4fd6b623a1d97560/jetified-android-vad-v1.0.0-release/proguard.txt
+/android-vad-v1.0.0-release/build/.transforms/1e40cc8ea6eef52e4fd6b623a1d97560/jetified-android-vad-v1.0.0-release/R.txt
+/android-vad-v1.0.0-release/build/.transforms/d4453d23550f10afed061b4ef582d9c6/jetified-android-vad-v1.0.0-release/jars/classes.jar
+/android-vad-v1.0.0-release/build/.transforms/d4453d23550f10afed061b4ef582d9c6/jetified-android-vad-v1.0.0-release/jni/arm64-v8a/libvad_jni.so
+/android-vad-v1.0.0-release/build/.transforms/d4453d23550f10afed061b4ef582d9c6/jetified-android-vad-v1.0.0-release/jni/armeabi-v7a/libvad_jni.so
+/android-vad-v1.0.0-release/build/.transforms/d4453d23550f10afed061b4ef582d9c6/jetified-android-vad-v1.0.0-release/jni/x86/libvad_jni.so
+/android-vad-v1.0.0-release/build/.transforms/d4453d23550f10afed061b4ef582d9c6/jetified-android-vad-v1.0.0-release/jni/x86_64/libvad_jni.so
+/android-vad-v1.0.0-release/build/.transforms/d4453d23550f10afed061b4ef582d9c6/jetified-android-vad-v1.0.0-release/proguard.txt
+/android-vad-v1.0.0-release/build/.transforms/d4453d23550f10afed061b4ef582d9c6/jetified-android-vad-v1.0.0-release/R.txt
+/android-vad-v1.0.0-release/build/.transforms/61a2f76de1e856b99f3ca7a9e8e2c399/jetified-android-vad-v1.0.0-release-runtime/classes.dex
+/android-vad-v1.0.0-release/build/.transforms/86dfa5eff58c9582f5b094cb3aea9789/jetified-android-vad-v1.0.0-release-runtime/classes.dex
+/android-vad-v1.0.0-release/build/.transforms/328beac61195a5cb4ac8a30ee41168ee/jetified-android-vad-v1.0.0-release-runtime/classes.dex
+/android-vad-v1.0.0-release/build/.transforms/1d1ef9789e276cd5a907306ada3ecc16.bin
+/android-vad-v1.0.0-release/build/.transforms/1e40cc8ea6eef52e4fd6b623a1d97560.bin
+/android-vad-v1.0.0-release/build/.transforms/2b85ec2d4777accad8bcc7617bc39b50.bin
+/android-vad-v1.0.0-release/build/.transforms/2bafaa2fe517b03be6e2ee2b1e98be3a.bin
+/android-vad-v1.0.0-release/build/.transforms/03e62d40c027bda39f3489801edcb56a.bin
+/android-vad-v1.0.0-release/build/.transforms/9d275dc0a724ff3cd9cf30f753a48a78.bin
+/android-vad-v1.0.0-release/build/.transforms/23d83b4fb580e1a429a6f6e6c9f3d1d6.bin
+/android-vad-v1.0.0-release/build/.transforms/026ed1a8a3ce01a849b80cd67c34a552.bin
+/android-vad-v1.0.0-release/build/.transforms/52a9d667726f7012a0bf8590b56e9a1e.bin
+/android-vad-v1.0.0-release/build/.transforms/61a2f76de1e856b99f3ca7a9e8e2c399.bin
+/android-vad-v1.0.0-release/build/.transforms/86dfa5eff58c9582f5b094cb3aea9789.bin
+/android-vad-v1.0.0-release/build/.transforms/328beac61195a5cb4ac8a30ee41168ee.bin
+/android-vad-v1.0.0-release/build/.transforms/371d433f5a77f0dc35b41489d3c4e103.bin
+/android-vad-v1.0.0-release/build/.transforms/479b2052b21dc015b40316922652949a.bin
+/android-vad-v1.0.0-release/build/.transforms/0486b03bb3765d7dca4c7c170eefa67e.bin
+/android-vad-v1.0.0-release/build/.transforms/594f6adba58611a664db6a0a8463b6bc.bin
+/android-vad-v1.0.0-release/build/.transforms/775b1afaa6453e1ad5cd8fa82e28bed5.bin
+/android-vad-v1.0.0-release/build/.transforms/056032a70026fcf5648fcb800854aed6.bin
+/android-vad-v1.0.0-release/build/.transforms/772897c03f1742abff0da4a0a7655517.bin
+/android-vad-v1.0.0-release/build/.transforms/b0e2a139ac4025333d30b3347b47c6df.bin
+/android-vad-v1.0.0-release/build/.transforms/bd882ddaf4f60dea713b80504fa63d22.bin
+/android-vad-v1.0.0-release/build/.transforms/c3fbb5f13a65f3040d0cb2f5381afdb6.bin
+/android-vad-v1.0.0-release/build/.transforms/cb4a32b33fb3babb556a4dd2713a9c01.bin
+/android-vad-v1.0.0-release/build/.transforms/cdeae178811eafbcc007256621cdf770.bin
+/android-vad-v1.0.0-release/build/.transforms/cf5f0f24640708ffea2fe5433dd06594.bin
+/android-vad-v1.0.0-release/build/.transforms/d4453d23550f10afed061b4ef582d9c6.bin
+/android-vad-v1.0.0-release/build/.transforms/d5129c536f3623d3e5e4f041e28dc9dd.bin
+/android-vad-v1.0.0-release/build/.transforms/d3089748ab626918cea3e75090aaf695.bin
+/android-vad-v1.0.0-release/build/.transforms/df1482384b234c3f9c590487e50a0a17.bin
+/android-vad-v1.0.0-release/build/.transforms/ed85639c8e3ba384c1a1c38a022f6354.bin
+/android-vad-v1.0.0-release/build/.transforms/ee6b43ebaec6657ce16a31e6601e0586.bin
+/android-vad-v1.0.0-release/build/.transforms/f92f91d90bce438e8c6720e4cbf75216.bin
+/android-vad-v1.0.0-release/build/.transforms/1e40cc8ea6eef52e4fd6b623a1d97560/jetified-android-vad-v1.0.0-release/res/values/values.xml
+/android-vad-v1.0.0-release/build/.transforms/1e40cc8ea6eef52e4fd6b623a1d97560/jetified-android-vad-v1.0.0-release/AndroidManifest.xml
